keycloak marche avec logout , sauvagrde auto a finir et site a modifier

--- a/src/main/resources/templates/external.html
+++ b/src/main/resources/templates/external.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:include="layout :: headerFragment">
+<head>
+  <meta charset="UTF-8">
+  <title>Backup Service</title>
+  <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 <div class="container">
