application presque finit il faut ajouter la partie pour afficher les zips sauvgarder , et resoudre le problem de sauvgarde automatique.

--- a/src/main/resources/templates/external.html
+++ b/src/main/resources/templates/external.html
@@ -11,7 +11,7 @@
     <h1>Systeme sauvgarde</h1>
   </div>
   <div>
-    <p>blah blah</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum quis neque vitae nunc tincidunt feugiat sed consequat justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ullamcorper euismod enim, eu pretium diam ultricies in. Integer nec tortor ut nibh pellentesque viverra vel ac mauris. Integer semper lacus vel ipsum aliquet sagittis. Quisque hendrerit nulla vel nulla molestie condimentum. In hac habitasse platea dictumst.</p>
 
     <h2>Connecter</h2>
     <div class="well">
