--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,8 +17,14 @@
         <option value="restore">Restore</option>
     </select><br><br>
 
+    <label for="zipFilesList">Select ZIP for Restore:</label>
+    <select id="zipFilesList" name="zipFilesList"></select><br><br>
+
     <label for="useZip">Use ZIP:</label>
     <input type="checkbox" id="useZip" name="useZip"><br><br>
+
+    <label for="extensions">Parameters:</label>
+    <textarea id="extensions" name="extensions"></textarea><br><br>
 
     <input type="submit" value="Submit">
 </form>
